--- a/css/index.css
+++ b/css/index.css
@@ -109,3 +109,29 @@ tr:first-child {
  tr:nth-child(odd){
    background-color: rgba(0, 0, 0, .15);
  }
+ @media only screen and (max-width: 1033px){
+  .coronavirus-box h5 , .coronavirus-box h4, .coronavirus-box{
+      font-size: 17px;
+   }
+ }
+
+ @media only screen and (max-width: 700px){
+  .coronavirus-box h5 , .coronavirus-box h4, .coronavirus-box{
+      font-size: 14px;
+   }
+ }
+ @media only screen and (max-width: 580px){
+  .coronavirus-box h5 , .coronavirus-box h4, .coronavirus-box{
+      font-size: 12px;
+   }
+ }
+ @media only screen and (max-width: 480px){
+  .coronavirus-box h5 , .coronavirus-box h4, .coronavirus-box{
+      font-size: 10px;
+   }
+ }
+ @media only screen and (max-width: 399px){
+  .coronavirus-box h5 , .coronavirus-box h4, .coronavirus-box{
+      font-size: 9px;
+   }
+ }
